force-app/main/default/objects/Auth_Credentials__mdt/Auth_Credentials__mdt.object-meta.xml
<CustomObject>
    <description>Object that holds authentication credentials such as Client ID and Client Secret</description>
    <label>Auth Credentials</label>
    <pluralLabel>Auth Credentials</pluralLabel>
</CustomObject>