force-app/main/default/objects/Auth_Credentials__mdt/fields/API_Audience_Endpoint_Part__c.field-meta.xml
<CustomField>
    <fullName>API_Audience_Endpoint_Part__c</fullName>
    <description>Part of the API Endpoint URL - this is usually used to identify the &quot;Audience&quot; part of the callout</description>
    <label>API (Audience) Endpoint Part</label>
    <length>255</length>
    <type>Text</type>
</CustomField>