force-app/main/default/objects/Auth_Credentials__mdt/fields/Auth_Endpoint__c.field-meta.xml
<CustomField>
    <fullName>Auth_Endpoint__c</fullName>
    <description>Authorization Endpoint. The place we need to reach in order to send the Client ID and Client Secrets</description>
    <label>Auth Endpoint</label>
    <length>255</length>
    <type>Text</type>
</CustomField>