force-app/main/default/objects/Auth_Credentials__mdt/fields/Client_Id__c.field-meta.xml
<CustomField>
    <fullName>Client_Id__c</fullName>
    <description>Fielding that represents Kiva Client ID</description>
    <label>Client ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>