force-app/main/default/objects/Auth_Credentials__mdt/fields/Client_Secret__c.field-meta.xml
<CustomField>
    <fullName>Client_Secret__c</fullName>
    <description>Field for storing auth Client Secret</description>
    <label>Client Secret</label>
    <length>255</length>
    <type>Text</type>
</CustomField>